# xippleFi-server

./: .gitignore  .swcrc  Cargo.toml  README.md  biome.json  ecosystem.config.cjs  ecosystem.config.js  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: pipeline.yml
crates/contracts/: Cargo.toml
crates/contracts/src/: defi.rs  error.rs  lib.rs  oracle.rs  xipple_fi.rs
crates/contracts/src/abis/: defi.abi.json  oracle.abi.json
crates/database/: Cargo.toml
crates/database/src/: enums.rs  lib.rs
crates/database/src/entities/: asset.rs  borrow_txn.rs  event.rs  mod.rs  repay_txn.rs  setting.rs  supply_txn.rs  user.rs  withdraw_txn.rs
crates/database/src/models/: mod.rs
crates/database/src/repositories/: asset.rs  event.rs  mod.rs  setting.rs  txn.rs  user.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: error.rs  heartbeat.rs  main.rs  threshold.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: error.rs  event_handler.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  openapi.rs
crates/server/src/extractors/: mod.rs  security.rs  states.rs  validators.rs
crates/server/src/handlers/: mod.rs
crates/server/src/handlers/assets/: get_asset.rs  get_assets.rs  mod.rs
crates/server/src/handlers/auth/: get_message.rs  mod.rs  verify_signature.rs
crates/server/src/handlers/users/: get_user_assets.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  lib.rs  read_env.rs  redis.rs
prisma/: schema.prisma
src/: assets-crawler.ts  assets-heart-beat.ts  server.ts
src/apis/assets/: get-asset.handler.ts  get-assets.handler.ts
src/apis/auth/: get-message.handler.ts  verify-signature.handler.ts
src/contracts/: oracle.contract.ts  services.ts
src/helpers/: find-static-asset.ts  find-static.ts  redis.ts
src/infrastrutures/: database.ts  redis.ts  viem.ts
src/plugins/: auth.plugin.ts
src/repositories/: asset.repository.ts  user.repository.ts
src/shared/: constants.ts  env.ts  parsers.ts
src/utils/: sleep.ts
