[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
axum = { version = "0.7.7" }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1.0.131"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
deadpool-redis = "0.18.0"
dotenv = "0.15.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.64"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
futures-util = "0.3.31"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
rand = "0.8.5"
http-body-util = "0.1.2"
axum-derive-error = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
alloy = { version = "0.5.2", features = ["hyper", "full"] }
