[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }

contracts = { path = "../contracts" }
database = { path = "../database" }
