[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum-derive-error = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde_with = { workspace = true }
alloy = { workspace = true }
rand = { workspace = true }

contracts = { path = "../contracts" }
database = { path = "../database" }
shared = { path = "../shared" }
